2009-10-08  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Move executeScript from FrameLoader to ScriptController
        https://bugs.webkit.org/show_bug.cgi?id=30200

        Update API call.

        * WebFrame.cpp:
        (wxWebFrame::RunScript):

2009-10-07  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        Factor PolicyChecker out of FrameLoader
        https://bugs.webkit.org/show_bug.cgi?id=30155

        Move the policy callback to the policy object.

        * WebKitSupport/FrameLoaderClientWx.cpp:
        (WebCore::FrameLoaderClientWx::dispatchWillSubmitForm):
        (WebCore::FrameLoaderClientWx::dispatchDecidePolicyForMIMEType):
        (WebCore::FrameLoaderClientWx::dispatchDecidePolicyForNewWindowAction):
        (WebCore::FrameLoaderClientWx::dispatchDecidePolicyForNavigationAction):

2009-09-25  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. Add EmptyPluginHalterClient when creating the Page.

        * WebView.cpp:
        (wxWebView::Create):

2009-09-22  Kevin Ollivier  <kevino@theolliviers.com>

        Build fix to ensure the import library gets properly installed on Windows.

        * wscript:

2009-09-17  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        Make PlatformWindow return something else than PlatformWidget
        https://bugs.webkit.org/show_bug.cgi?id=29085

        Reflect the rename of platformWindow and it's return type.

        * WebKitSupport/ChromeClientWx.cpp:
        (WebCore::ChromeClientWx::platformPageClient):
        * WebKitSupport/ChromeClientWx.h:
        * WebKitSupport/EditorClientWx.cpp:
        (WebCore::EditorClientWx::isEditable):
        (WebCore::EditorClientWx::registerCommandForUndo):
        (WebCore::EditorClientWx::registerCommandForRedo):
        (WebCore::EditorClientWx::clearUndoRedoOperations):
        (WebCore::EditorClientWx::canUndo):
        (WebCore::EditorClientWx::canRedo):